--- a/margin-and-padding/margin-and-padding-2/style.css
+++ b/margin-and-padding/margin-and-padding-2/style.css
@@ -7,21 +7,37 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 8px;
 }
 
 .title {
+  margin-top: 0;
+  margin-bottom: 10px;
   background: #e3f4ff;
+  padding: 10px;
+  font-size: 16px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 20px 10px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .button {
+  text-align: center;
   background: #e3f4ff;
+  display: block;
+  padding: 10px;
+  text-align: center;;
+  margin-top: 10px;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  padding: 10px 20px;
+  margin: 5px auto;
 }
