--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -8,10 +8,17 @@ body {
   font-family: Besley, serif;
 }
 
+.header,
+.links {
+  display: flex;
+  align-items: center;
+}
+
 .header {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  padding: 10px;
 }
 
 .profile-image {
@@ -35,6 +42,8 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  margin-left: auto;
+  margin-right: 16px;
 }
 
 a {
@@ -45,4 +54,11 @@ a {
 
 ul {
   list-style-type: none;
+  padding: 0;
+  margin-left: 16px;
+  gap: 16px;
+}
+
+.links li:nth-child(2) {
+  /* margin: auto 16px; */
 }
